--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;
-height: 100vh;
 margin: 0;
+overflow-x: hidden;
 
 }
  h1 {
@@ -30,7 +30,7 @@ height: 200px;
 margin: 10px;
 border-radius: 10px;
 box-shadow: 2px 4px 5px rgba(0,0,0,0.3);
-transform: translateX(400%);
+transform: translateX(200%);
 transition: transform 0.4s ease;
 }
 
